--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:push": "npx prisma db push",
+    "prisma:seed": "npx prisma db push && npx prisma db seed",
     "prisma:pull": "npx prisma db pull",
     "prisma:sync": "npx prisma generate"
     
@@ -80,5 +81,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  }  
 }
